<resources>
    <string name="app_name">Fitvance Client</string>
    <string name="user_hint">Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_text">Iniciar sesión</string>
    <string name="fitvance_title">Fitvance</string>
    <string name="slogan_subtitle">¡Es hora de hacerlo!</string>
    <string name="all_rights_reserved_text">2019 - 2020. Todos los derechos reservados.</string>
</resources>
