<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/inner_activity_space"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/ll_login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fitvance_title"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/super_title_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/inner_activity_space"
            android:gravity="center"
            android:text="@string/slogan_subtitle"
            android:textColor="@android:color/white"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/between_elements_space"
                android:background="@android:color/white"
                android:drawableLeft="@drawable/profile"
                android:drawableTint="@color/colorPrimary"
                android:gravity="center"
                android:hint="@string/user_hint"
                android:padding="@dimen/elements_internal_space_size" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/between_elements_space"
                android:background="@android:color/white"
                android:drawableLeft="@drawable/key"
                android:drawableTint="@color/colorPrimary"
                android:gravity="center"
                android:hint="@string/password_hint"
                android:padding="@dimen/elements_internal_space_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/login_text"
                android:textColor="@android:color/white"></Button>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_rights_reserved_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_login_container" />

</androidx.constraintlayout.widget.ConstraintLayout>